2010-10-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx:
 - std-qualified use of FILE; fixes #208.
2010-09-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/notify-listen.hxx:
 - Fixed mistaken implication in documentation, thanks Michael Krelin.
 src/connection_base.cxx:
 - Cosmetic.
2010-08-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/except.hxx, src/result.cxx:
 - Include approximate location of error in syntax_error.
2010-08-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
 - Fixed some breakage with 9.0 hex-escaping support detection.
 test/test007.cxx:
 - "Affected rows" also works for SELECT in 9.0.
 test/test090.cxx:
 - Retired binary-escaping tests that don't apply to the hex format.
 test/unit/test_binarystring.cxx:
 - Check that binary-escaped string contains no "high bytes."
2010-08-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in:
 - Check for PostgreSQL 9.0 hex binary-escaping format.
 src/binarystring.cxx:
 - Refactor unescaping.
 - Work around hex-format support in PQunescapeBytea.
2010-06-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, include/pqxx/transaction_base.hxx,
 src/connection_base.cxx, src/transaction_base.cxx,
 test/unit/test_binarystring.cxx:
 - Added quote() for binarystring.
 - More testing of escaping/unescaping.
2010-06-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/binarystring.cxx:
 - Added missing 10 to hex digits.
2010-06-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/binarystring.cxx:
 - Support 9.0-style hex-escaping on ancient libpq.
 test/unit/test_binarystring.cxx:
 - New
2010-06-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/libpq/*:
 - Lots more automatically-stored libpq config headers.
2010-06-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/libpq/7.3/config-internal-libpq.h:
 - Sample header for libpq 7.3.
 test/unit/test_error_verbosity.cxx: